# LeoGraph

./: .clang-format  .clang-format-ignore  .cursorignore  .gitignore  CMakeLists.txt  README.md
src/Parsers/: ASTAlterNamedCollectionQuery.cpp  ASTAlterNamedCollectionQuery.h  ASTAlterQuery.cpp  ASTAlterQuery.h  ASTAssignment.h  ASTAsterisk.cpp  ASTAsterisk.h  ASTBackupQuery.cpp  ASTBackupQuery.h  ASTCheckQuery.h  ASTCollation.cpp  ASTCollation.h  ASTColumnDeclaration.cpp  ASTColumnDeclaration.h  ASTColumnsMatcher.cpp  ASTColumnsMatcher.h  ASTColumnsTransformers.cpp  ASTColumnsTransformers.h  ASTConstraintDeclaration.cpp  ASTConstraintDeclaration.h  ASTCopyQuery.cpp  ASTCopyQuery.h  ASTCreateIndexQuery.cpp  ASTCreateIndexQuery.h  ASTCreateNamedCollectionQuery.cpp  ASTCreateNamedCollectionQuery.h  ASTCreateQuery.cpp  ASTCreateQuery.h  ASTCreateResourceQuery.cpp  ASTCreateResourceQuery.h  ASTCreateSQLFunctionQuery.cpp  ASTCreateSQLFunctionQuery.h  ASTCreateWasmFunctionQuery.cpp  ASTCreateWasmFunctionQuery.h  ASTCreateWorkloadQuery.cpp  ASTCreateWorkloadQuery.h  ASTDataType.cpp  ASTDataType.h  ASTDatabaseOrNone.cpp  ASTDatabaseOrNone.h  (+321 more)
src/Parsers/Access/: ASTAuthenticationData.cpp  ASTAuthenticationData.h  ASTCheckGrantQuery.cpp  ASTCheckGrantQuery.h  ASTCreateMaskingPolicyQuery.cpp  ASTCreateMaskingPolicyQuery.h  ASTCreateQuotaQuery.cpp  ASTCreateQuotaQuery.h  ASTCreateRoleQuery.cpp  ASTCreateRoleQuery.h  ASTCreateRowPolicyQuery.cpp  ASTCreateRowPolicyQuery.h  ASTCreateSettingsProfileQuery.cpp  ASTCreateSettingsProfileQuery.h  ASTCreateUserQuery.cpp  ASTCreateUserQuery.h  ASTDropAccessEntityQuery.cpp  ASTDropAccessEntityQuery.h  ASTExecuteAsQuery.cpp  ASTExecuteAsQuery.h  ASTGrantQuery.cpp  ASTGrantQuery.h  ASTMoveAccessEntityQuery.cpp  ASTMoveAccessEntityQuery.h  ASTPublicSSHKey.cpp  ASTPublicSSHKey.h  ASTRolesOrUsersSet.cpp  ASTRolesOrUsersSet.h  ASTRowPolicyName.cpp  ASTRowPolicyName.h  ASTSetRoleQuery.cpp  ASTSetRoleQuery.h  ASTSettingsProfileElement.cpp  ASTSettingsProfileElement.h  ASTShowAccessEntitiesQuery.cpp  ASTShowAccessEntitiesQuery.h  ASTShowAccessQuery.h  ASTShowCreateAccessEntityQuery.cpp  ASTShowCreateAccessEntityQuery.h  ASTShowGrantsQuery.cpp  (+51 more)
src/Parsers/Kusto/: Formatters.cpp  Formatters.h  ParserKQLDateTypeTimespan.cpp  ParserKQLDateTypeTimespan.h  ParserKQLDistinct.cpp  ParserKQLDistinct.h  ParserKQLExtend.cpp  ParserKQLExtend.h  ParserKQLFilter.cpp  ParserKQLFilter.h  ParserKQLLimit.cpp  ParserKQLLimit.h  ParserKQLMVExpand.cpp  ParserKQLMVExpand.h  ParserKQLMakeSeries.cpp  ParserKQLMakeSeries.h  ParserKQLOperators.cpp  ParserKQLOperators.h  ParserKQLPrint.cpp  ParserKQLPrint.h  ParserKQLProject.cpp  ParserKQLProject.h  ParserKQLQuery.cpp  ParserKQLQuery.h  ParserKQLSort.cpp  ParserKQLSort.h  ParserKQLStatement.cpp  ParserKQLStatement.h  ParserKQLSummarize.cpp  ParserKQLSummarize.h  ParserKQLTable.cpp  ParserKQLTable.h  Utilities.cpp  Utilities.h  parseKQLQuery.cpp  parseKQLQuery.h
src/Parsers/MySQL/: ASTAlterCommand.cpp  ASTAlterCommand.h  ASTAlterQuery.cpp  ASTAlterQuery.h  ASTCreateDefines.cpp  ASTCreateDefines.h  ASTCreateQuery.h  (+21 more)
(+8458 files in other folders)
